# sciColorMap

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  ENVIRONMENT.md  LICENSE  README.md  _README.md  acton.m  algae.m  bamako.m  berlin.m  broc.m  broco.m  buda.m  cividis.m  cmbalance.m  cmbwr.m  cmdelta.m  cmdiff.m  cmmatter.m  cmoxy.m  cmsolar.m  corko.m  curl.m  davos.m  devon.m  haline.m  inferno.m  lisbon.m  magma.m  nuuk.m  oslo.m  roma.m  romao.m  seismic.m  show_cm.m  show_gallery.m  showcm.m  showgallery.m  (+7 more)
colormaps/: acton.csv  algae.csv  algae.m  bamako.csv  batlow.csv  batlow.m  bentcw.csv  bentcw.m  berlin.csv  bilbao.csv  bilbao.m  blackbody.csv  blackbody.m  broc.csv  broco.csv  buda.csv  cividis.csv  cmamp.csv  cmamp.m  cmbalance.csv  cmbkr.csv  cmbkr.m  cmbwr.csv  cmbwr.m  cmdeep.csv  cmdeep.m  cmdelta.csv  cmdense.csv  cmdense.m  cmdiff.csv  cmfast.csv  cmfast.m  cmgray.csv  cmgray.m  cmice.csv  cmice.m  cmmatter.csv  cmmatter.m  cmoxy.csv  cmphase.csv  (+68 more)
context/: conventions-bundle.json  conventions.md  glossary.md  jobs.md  references.md  templates.md
context/conventions/: building-context.md  how-to-work-here.md  tracking-progress.md  where-files-live.md  working-with-code.md  working-with-data.md  writing-for-the-user.md
context/efforts/: python-access.md  (+1 more)
context/templates/project/: AGENTS.md  CHANGELOG.md  ENVIRONMENT.md  README.md  gitignore  pyproject.toml
examples/: basic_usage.m  basic_usage.py  show_gallery.m
src/: scm.py
tests/: test_colormaps.m  test_export_data.m  test_list_cm.m  test_scicolormap.py  test_trim.m  test_warp.m
(+33 files in other folders)
